[gd_scene load_steps=7 format=2]

[ext_resource path="res://visuals/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/chatConnection.gd" type="Script" id=2]
[ext_resource path="res://visuals/fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="ChatConnection" type="Control"]
margin_right = 456.0
margin_bottom = 414.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
connect_btn = NodePath("MarginContainer/VBoxContainer/ConnectBtn")
connect_cred_btn = NodePath("MarginContainer/VBoxContainer/ConnectCredBtn")
connect_cred_del_btn = NodePath("MarginContainer/VBoxContainer/ConnectDeleteCredBtn")
save_session = NodePath("MarginContainer/VBoxContainer/SaveSession")
save_check = NodePath("MarginContainer/VBoxContainer/SaveCheck")
nick_line = NodePath("MarginContainer/VBoxContainer/NickLine")
oauth = NodePath("MarginContainer/VBoxContainer/AuthLine")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 451.0
margin_bottom = 404.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 446.0
margin_bottom = 28.0
theme = ExtResource( 1 )
text = "TWITCH CHAT CONNECTION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 446.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 50 )
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 446.0
margin_bottom = 107.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Enter your username to connect with credentials"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickLine" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 446.0
margin_bottom = 149.0
theme = ExtResource( 1 )
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthLine" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 446.0
margin_bottom = 191.0
theme = ExtResource( 1 )
secret = true
placeholder_text = "oauth_key"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSession" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 446.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Save current username ?"

[node name="SaveCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 446.0
margin_bottom = 261.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Save encrypted credentials ?"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 446.0
margin_bottom = 315.0
rect_min_size = Vector2( 0, 50 )
custom_styles/separator = SubResource( 1 )

[node name="ConnectBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 446.0
margin_bottom = 353.0
focus_mode = 0
theme = ExtResource( 1 )
disabled = true
text = "CONNECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectCredBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 446.0
margin_bottom = 391.0
focus_mode = 0
theme = ExtResource( 1 )
disabled = true
text = "CONNECT WITH CREDENTIALS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectDeleteCredBtn" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 335.0
margin_right = 446.0
margin_bottom = 369.0
focus_mode = 0
theme = ExtResource( 1 )
disabled = true
text = "DELETE SAVED CREDENTIALS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="MarginContainer/VBoxContainer/NickLine" to="." method="_on_NickLine_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/AuthLine" to="." method="_on_AuthLine_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConnectBtn" to="." method="_on_ConnectBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConnectCredBtn" to="." method="_on_ConnectCredBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConnectDeleteCredBtn" to="." method="_on_ConnectDeleteCredBtn_pressed"]
